syntax = "proto3";

option go_package = "cbt-test-mini-project/gen/proto/base";
package base;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ========================================
// ENUMS
// ========================================

enum JawabanOption {
    JAWABAN_INVALID = 0;
    A = 1;
    B = 2;
    C = 3;
    D = 4;
}

enum TestStatus {
    STATUS_INVALID = 0;
    ONGOING = 1;
    COMPLETED = 2;
    TIMEOUT = 3;
}

// ========================================
// BASE SERVICE
// ========================================

service Base {
    rpc HealthCheck(google.protobuf.Empty) returns (MessageStatusResponse) {};
}

// ========================================
// AUTH SERVICE (Added for JWT Authentication)
// ========================================

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {};
    rpc GetProfile(google.protobuf.Empty) returns (UserResponse) {};
    // User Management (Admin Only)
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {};
    rpc GetUser(GetUserRequest) returns (UserResponse) {};
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {};
    rpc DeleteUser(DeleteUserRequest) returns (MessageStatusResponse) {};
    rpc CreateUser(CreateUserRequest) returns (UserResponse) {};
}

// ========================================
// MATA PELAJARAN SERVICE
// ========================================

service MataPelajaranService {
    rpc CreateMataPelajaran(CreateMataPelajaranRequest) returns (MataPelajaranResponse) {};
    rpc GetMataPelajaran(GetMataPelajaranRequest) returns (MataPelajaranResponse) {};
    rpc UpdateMataPelajaran(UpdateMataPelajaranRequest) returns (MataPelajaranResponse) {};
    rpc DeleteMataPelajaran(DeleteMataPelajaranRequest) returns (MessageStatusResponse) {};
    rpc ListMataPelajaran(google.protobuf.Empty) returns (ListMataPelajaranResponse) {};
}

// ========================================
// MATERI SERVICE
// ========================================

service MateriService {
    rpc CreateMateri(CreateMateriRequest) returns (MateriResponse) {};
    rpc GetMateri(GetMateriRequest) returns (MateriResponse) {};
    rpc UpdateMateri(UpdateMateriRequest) returns (MateriResponse) {};
    rpc DeleteMateri(DeleteMateriRequest) returns (MessageStatusResponse) {};
    rpc ListMateri(ListMateriRequest) returns (ListMateriResponse) {};
}

// ========================================
// TINGKAT SERVICE
// ========================================

service TingkatService {
    rpc CreateTingkat(CreateTingkatRequest) returns (TingkatResponse) {};
    rpc GetTingkat(GetTingkatRequest) returns (TingkatResponse) {};
    rpc UpdateTingkat(UpdateTingkatRequest) returns (TingkatResponse) {};
    rpc DeleteTingkat(DeleteTingkatRequest) returns (MessageStatusResponse) {};
    rpc ListTingkat(google.protobuf.Empty) returns (ListTingkatResponse) {};
}

// ========================================
// SOAL SERVICE (ADMIN)
// ========================================

service SoalService {
    rpc CreateSoal(CreateSoalRequest) returns (SoalResponse) {};
    rpc GetSoal(GetSoalRequest) returns (SoalResponse) {};
    rpc UpdateSoal(UpdateSoalRequest) returns (SoalResponse) {};
    rpc DeleteSoal(DeleteSoalRequest) returns (MessageStatusResponse) {};
    rpc ListSoal(ListSoalRequest) returns (ListSoalResponse) {};
    rpc UploadImageToSoal(UploadImageToSoalRequest) returns (UploadImageResponse) {};
    rpc DeleteImageFromSoal(DeleteImageFromSoalRequest) returns (MessageStatusResponse) {};
    rpc UpdateImageInSoal(UpdateImageInSoalRequest) returns (MessageStatusResponse) {};
}

// ========================================
// TEST SESSION SERVICE (STUDENT)
// ========================================

service TestSessionService {
    // Session management
    rpc CreateTestSession(CreateTestSessionRequest) returns (TestSessionResponse) {};
    rpc GetTestSession(GetTestSessionRequest) returns (TestSessionResponse) {};

    // Test execution (NEW - critical!)
    rpc GetTestQuestions(GetTestQuestionsRequest) returns (TestQuestionsResponse) {};
    rpc SubmitAnswer(SubmitAnswerRequest) returns (SubmitAnswerResponse) {};
    rpc ClearAnswer(ClearAnswerRequest) returns (ClearAnswerResponse) {};
    rpc CompleteSession(CompleteSessionRequest) returns (TestSessionResponse) {};

    // Results & review
    rpc GetTestResult(GetTestResultRequest) returns (TestResultResponse) {};

    // Admin queries
    rpc ListTestSessions(ListTestSessionsRequest) returns (ListTestSessionsResponse) {};
}

// ========================================
// HISTORY SERVICE (NEW - Replaced Analytics)
// ========================================

service HistoryService {
    rpc GetStudentHistory(StudentHistoryRequest) returns (StudentHistoryResponse) {};  // For logged-in student
    rpc GetHistoryDetail(GetHistoryDetailRequest) returns (HistoryDetailResponse) {};
}

// ========================================
// COMMON MESSAGES
// ========================================

message MessageStatusResponse {
    string message = 1;
    string status = 2;
}

message PaginationRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message PaginationResponse {
    int32 total_count = 1;
    int32 total_pages = 2;
    int32 current_page = 3;
    int32 page_size = 4;
}

// ========================================
// AUTH MESSAGES (Added for JWT Authentication)
// ========================================

enum UserRole {
    ROLE_INVALID = 0;
    SISWA = 1;
    ADMIN = 2;
}

message User {
    int32 id = 1;
    string email = 2;
    string nama = 3;
    UserRole role = 4;
    bool is_active = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    string password_hash = 8;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refresh_token = 2;
    User user = 3;
    google.protobuf.Timestamp expires_at = 4;
    bool success = 5;
    string message = 6;
}

message UserResponse {
    User user = 1;
    bool success = 2;
    string message = 3;
}

message ListUsersRequest {
    UserRole role = 1;  // Optional filter
    int32 status_filter = 2;  // 0=all, 1=active only, 2=inactive only
    PaginationRequest pagination = 3;
}

message ListUsersResponse {
    repeated User users = 1;
    PaginationResponse pagination = 2;
    bool success = 3;
    string message = 4;
    int32 total = 5;
}

message GetUserRequest {
    int32 id = 1;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string nama = 3;
    UserRole role = 4;
}

message UpdateUserRequest {
    int32 id = 1;
    string email = 2;
    string nama = 3;
    UserRole role = 4;
    bool is_active = 5;
}

message DeleteUserRequest {
    int32 id = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp expires_at = 3;
    bool success = 4;
    string message = 5;
}

// ========================================
// MATA PELAJARAN MESSAGES
// ========================================

message MataPelajaran {
    int32 id = 1;
    string nama = 2;
}

message CreateMataPelajaranRequest {
    string nama = 1;
}

message GetMataPelajaranRequest {
    int32 id = 1;
}

message UpdateMataPelajaranRequest {
    int32 id = 1;
    string nama = 2;
}

message DeleteMataPelajaranRequest {
    int32 id = 1;
}

message MataPelajaranResponse {
    MataPelajaran mata_pelajaran = 1;
}

message ListMataPelajaranResponse {
    repeated MataPelajaran mata_pelajaran = 1;
}

// ========================================
// MATERI MESSAGES
// ========================================

message Materi {
    int32 id = 1;
    MataPelajaran mata_pelajaran = 2;  // Nested, bukan hanya ID
    Tingkat tingkat = 3;
    string nama = 4;
}

message CreateMateriRequest {
    int32 id_mata_pelajaran = 1;
    int32 id_tingkat = 2;
    string nama = 3;
}

message GetMateriRequest {
    int32 id = 1;
}

message UpdateMateriRequest {
    int32 id = 1;
    int32 id_mata_pelajaran = 2;
    int32 id_tingkat = 3;
    string nama = 4;
}

message DeleteMateriRequest {
    int32 id = 1;
}

message MateriResponse {
    Materi materi = 1;
}

message ListMateriRequest {
    int32 id_mata_pelajaran = 1;
    int32 id_tingkat = 2;
    PaginationRequest pagination = 3;
}

message ListMateriResponse {
    repeated Materi materi = 1;
    PaginationResponse pagination = 2;
}

// ========================================
// TINGKAT MESSAGES
// ========================================

message Tingkat {
    int32 id = 1;
    string nama = 2;
}

message CreateTingkatRequest {
    string nama = 1;
}

message GetTingkatRequest {
    int32 id = 1;
}

message UpdateTingkatRequest {
    int32 id = 1;
    string nama = 2;
}

message DeleteTingkatRequest {
    int32 id = 1;
}

message TingkatResponse {
    Tingkat tingkat = 1;
}

message ListTingkatResponse {
    repeated Tingkat tingkat = 1;
}

// ========================================
// SOAL MESSAGES
// ========================================

// Image metadata for soal
message SoalGambar {
    int32 id = 1;
    string nama_file = 2;
    string file_path = 3;
    int32 file_size = 4;
    string mime_type = 5;
    int32 urutan = 6;
    string keterangan = 7;
    google.protobuf.Timestamp created_at = 8;
}

// Full soal with answer (for admin/teacher only)
message SoalFull {
    int32 id = 1;
    Materi materi = 2;
    string pertanyaan = 3;
    string opsi_a = 4;
    string opsi_b = 5;
    string opsi_c = 6;
    string opsi_d = 7;
    JawabanOption jawaban_benar = 8;
    string pembahasan = 9;
    repeated SoalGambar gambar = 10;
}

// Soal for student (no answer exposed)
message SoalForStudent {
    int32 id = 1;
    int32 nomor_urut = 2;  // Question number in test
    string pertanyaan = 3;
    string opsi_a = 4;
    string opsi_b = 5;
    string opsi_c = 6;
    string opsi_d = 7;
    JawabanOption jawaban_dipilih = 8;  // If already answered
    bool is_answered = 9;
    Materi materi = 10;
    repeated SoalGambar gambar = 11;
}

message CreateSoalRequest {
    int32 id_materi = 1;
    int32 id_tingkat = 2;
    string pertanyaan = 3;
    string opsi_a = 4;
    string opsi_b = 5;
    string opsi_c = 6;
    string opsi_d = 7;
    JawabanOption jawaban_benar = 8;
    string pembahasan = 9;
    repeated bytes image_bytes = 10;
}

message GetSoalRequest {
    int32 id = 1;
}

message UpdateSoalRequest {
    int32 id = 1;
    int32 id_materi = 2;
    int32 id_tingkat = 3;
    string pertanyaan = 4;
    string opsi_a = 5;
    string opsi_b = 6;
    string opsi_c = 7;
    string opsi_d = 8;
    JawabanOption jawaban_benar = 9;
    string pembahasan = 10;
    repeated bytes image_bytes = 11;
}

message DeleteSoalRequest {
    int32 id = 1;
}

message SoalResponse {
    SoalFull soal = 1;
}

message ListSoalRequest {
    int32 id_materi = 1;
    int32 id_tingkat = 2;
    int32 id_mata_pelajaran = 3;
    PaginationRequest pagination = 4;
}

message ListSoalResponse {
    repeated SoalFull soal = 1;
    PaginationResponse pagination = 2;
}

message UploadImageToSoalRequest {
    int32 id_soal = 1;
    bytes image_bytes = 2;
    string nama_file = 3;
    int32 urutan = 4;
    string keterangan = 5;
}

message UploadImageResponse {
    SoalGambar gambar = 1;
}

message DeleteImageFromSoalRequest {
    int32 id_gambar = 1;
}

message UpdateImageInSoalRequest {
    int32 id_gambar = 1;
    int32 urutan = 2;
    string keterangan = 3;
}

// ========================================
// TEST SESSION MESSAGES
// ========================================

message TestSession {
    int32 id = 1;
    string session_token = 2;
    User user = 3;  // From JWT, not input
    string nama_peserta = 4;  // Participant's name
    Tingkat tingkat = 5;
    MataPelajaran mata_pelajaran = 6;  // Nested object
    google.protobuf.Timestamp waktu_mulai = 7;
    google.protobuf.Timestamp waktu_selesai = 8;
    google.protobuf.Timestamp batas_waktu = 9;  // ADDED
    int32 durasi_menit = 10;
    double nilai_akhir = 11;
    int32 jumlah_benar = 12;
    int32 total_soal = 13;
    TestStatus status = 14;
}

message CreateTestSessionRequest {
    int32 id_tingkat = 1;
    int32 id_mata_pelajaran = 2;
    int32 durasi_menit = 3;
    int32 jumlah_soal = 4;  // ADDED - critical!
}

message GetTestSessionRequest {
    string session_token = 1;
}

message TestSessionResponse {
    TestSession test_session = 1;
}

message ListTestSessionsRequest {
    int32 id_tingkat = 1;
    int32 id_mata_pelajaran = 2;
    TestStatus status = 3;
    PaginationRequest pagination = 4;
}

message ListTestSessionsResponse {
    repeated TestSession test_sessions = 1;
    PaginationResponse pagination = 2;
}

// ========================================
// TEST EXECUTION MESSAGES (NEW)
// ========================================

message GetTestQuestionsRequest {
    string session_token = 1;
    int32 nomor_urut = 2;  // Question number to fetch (1-20, etc.)
}

message TestQuestionsResponse {
    string session_token = 1;
    repeated SoalForStudent soal = 2;  // ALL questions for the session
    int32 total_soal = 3;
    int32 current_nomor_urut = 4;
    int32 dijawab_count = 5;
    repeated bool is_answered_status = 6;  // Bool array for all questions (sidebar status)
    google.protobuf.Timestamp batas_waktu = 7;
}

message SubmitAnswerRequest {
    string session_token = 1;
    int32 nomor_urut = 2;
    JawabanOption jawaban_dipilih = 3;
}

message SubmitAnswerResponse {
    string session_token = 1;
    int32 nomor_urut = 2;
    JawabanOption jawaban_dipilih = 3;
    bool is_correct = 4;  // Immediate feedback
    google.protobuf.Timestamp dijawab_pada = 5;
}

message ClearAnswerRequest {
    string session_token = 1;
    int32 nomor_urut = 2;
}

message ClearAnswerResponse {
    string session_token = 1;
    int32 nomor_urut = 2;
    google.protobuf.Timestamp dibatalkan_pada = 3;
}

message CompleteSessionRequest {
    string session_token = 1;
}

// ========================================
// TEST RESULT MESSAGES (NEW)
// ========================================

message GetTestResultRequest {
    string session_token = 1;
}

message JawabanDetail {
    int32 nomor_urut = 1;
    string pertanyaan = 2;
    string opsi_a = 3;
    string opsi_b = 4;
    string opsi_c = 5;
    string opsi_d = 6;
    JawabanOption jawaban_dipilih = 7;
    JawabanOption jawaban_benar = 8;
    bool is_correct = 9;
    bool is_answered = 10;
    string pembahasan = 11;
    repeated SoalGambar gambar = 12;
}

message TestResultResponse {
    TestSession session_info = 1;
    repeated JawabanDetail detail_jawaban = 2;
    repeated Tingkat tingkat = 3;
}

// ========================================
// HISTORY MESSAGES (NEW - Replaced Analytics)
// ========================================

message StudentHistoryRequest {
    int32 user_id = 1;  // From JWT, not input
    int32 tingkatan = 2;  // Optional filter
    int32 id_mata_pelajaran = 3;  // Optional filter
    PaginationRequest pagination = 4;
}

message HistorySummary {
    int32 id = 1;
    string session_token = 2;
    MataPelajaran mata_pelajaran = 3;
    Tingkat tingkat = 4;
    google.protobuf.Timestamp waktu_mulai = 5;
    google.protobuf.Timestamp waktu_selesai = 6;
    int32 durasi_pengerjaan_detik = 7;  // Actual time spent
    double nilai_akhir = 8;
    int32 jumlah_benar = 9;
    int32 total_soal = 10;
    TestStatus status = 11;
    string nama_peserta = 12;
}

message StudentHistoryResponse {
    repeated HistorySummary history = 1;
    PaginationResponse pagination = 2;

    // Aggregate stats
    double rata_rata_nilai = 3;
    int32 total_test_completed = 4;
    User user = 5;
    int32 tingkatan = 6;
}

message ListStudentHistoriesRequest {
    int32 user_id = 1;  // Optional: filter by specific student
    int32 tingkatan = 2;  // Optional filter
    int32 id_mata_pelajaran = 3;  // Optional filter
    PaginationRequest pagination = 4;
}

message ListStudentHistoriesResponse {
    repeated StudentHistoryWithUser history_per_student = 1;
    PaginationResponse pagination = 2;
}

message StudentHistoryWithUser {
    User user = 1;
    repeated HistorySummary history = 2;
    double rata_rata_nilai = 3;
    int32 total_test_completed = 4;
}

message GetHistoryDetailRequest {
    string session_token = 1;
}

message HistoryDetailResponse {
    TestSession session_info = 1;
    repeated JawabanDetail detail_jawaban = 2;

    // Breakdown per materi
    repeated MateriBreakdown breakdown_materi = 3;
}

message MateriBreakdown {
    string nama_materi = 1;
    int32 jumlah_soal = 2;
    int32 jumlah_benar = 3;
    double persentase_benar = 4;
}